[metadata]
name = pyfidelius
version = 0.0.4
author = Nikhil Raj
author_email = nikhil25803@gmail.com
description = Python SDK for Fidelius CLI, a tool designed for ECDH cryptography.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikhil25803/pyfidelius
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    rich

[options.extras_require]
testing =
    pytest>=8.2.1
    flake8>=3.9

[options.packages.find]
where = src

[options.package_data]
* = fidelius-cli-1.2.0/bin/*, fidelius-cli-1.2.0/lib/*.jar

[flake8]
max-line-length = 160
